--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,9 @@
     tools:context=".MainActivity">
 
     <ListView
-        android:id="@+id/notes"
-        android:layout_width="373dp"
-        android:layout_height="684dp"
+        android:id="@+id/listView"
+        android:layout_width="290dp"
+        android:layout_height="326dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="22dp"
