--- a/app/src/main/res/layout/activity_notes_editor.xml
+++ b/app/src/main/res/layout/activity_notes_editor.xml
@@ -6,4 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".NotesEditor">
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="359dp"
+        android:layout_height="636dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="37dp"
+        android:ems="10"
+        android:gravity="center|top"
+        android:inputType="textMultiLine|textPersonName"
+        android:text="Name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
