--- a/app/src/main/res/layout/activity_notes_editor.xml
+++ b/app/src/main/res/layout/activity_notes_editor.xml
@@ -17,7 +17,7 @@
         android:ems="10"
         android:gravity="center|top"
         android:inputType="textMultiLine|textPersonName"
-        android:text="Name"
+        android:text="NOTES :-- \n"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
